--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
   kibana:
     build:
       context: kibana/
-    volumes:
-      - ./kibana/config:/etc/kibana:ro
+    # volumes:
+    #   - ./kibana/config:/etc/kibana:ro
     ports:
       - "5601:5601"
     networks:
