--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -3,4 +3,4 @@ FROM elasticsearch:5-alpine
 COPY ./config/elasticsearch.yml /usr/share/elasticsearch/config/elasticsearch.yml
 
 # 数据存储文件不在版本库中
-# VOLUME [ "/usr/share/elasticsearch/data" ]
+VOLUME [ "/usr/share/elasticsearch/data" ]
